--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,7 @@
 baseURL = 'https://adalrikus.github.io/'
 languageCode = 'en-us'
 title = 'Portfolio'
+theme = 'hello-friend'
 paginate = 5
 
 [params]
