--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,26 @@
 baseURL = 'https://adalrikus.github.io/'
 languageCode = 'en-us'
-title = 'Portfolio'
+title = 'Adilkhan Zarubay'
 theme = 'CosmicBlue'
 
 pygmentsUseClasses = true
+
+[[menus.main]]
+name = 'Home'
+pageRef = '/'
+weight = 10
+
+[[menus.main]]
+name = 'Posts'
+pageRef = '/posts'
+weight = 20
+
+[[menus.main]]
+name = 'Tags'
+pageRef = '/tags'
+weight = 30
+
+[[menus.main]]
+name = "About"
+pageRef = "/about"
+weight = 40
